--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  font-family: "Roboto Mono";   
+  font-family: Arial, Helvetica, sans-serif;   
   padding: 2% 2%;
-  background-color: seagreen;
+  background-color: rgb(23, 207, 124);
 }
 
 input {
@@ -11,10 +11,6 @@ input {
   max-height: 1rem;
   max-width: 4rem;
   background-color: whitesmoke;
-}
-
-input:focus-visible {
-  border-color: seagreen;
 }
 
 .title {
@@ -53,7 +49,7 @@ input:focus-visible {
 }
 
 .btn {
-  font-family: "Roboto Mono";
+  font-family: Arial, Helvetica, sans-serif;
   padding: 4px 8px;  
   margin-left: 3%;
   border-radius: 4px;
@@ -62,40 +58,14 @@ input:focus-visible {
   background-color: whitesmoke;
 }
 
-.btn:hover {
-  background-color: seagreen;
-  color: white;
-  border-color: white;
-}
-
-.input-group {
-  display: flex;
-  align-items: baseline;
-}
-
-.input-group:first-of-type {
-  margin-right: 2%;
-}
-
-.input-group:last-of-type {
-  margin-left: 2%;
-}
-
 label{
   margin-right: 1rem;
-}
-
-footer {
-  text-align: center;
-}
-
-.github-link:visited {
-  color: black;
+  margin-left: 1rem;
 }
 
 @media (max-width: 1024px) {
   #form {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: flex-start;
   }
 
@@ -114,11 +84,6 @@ footer {
     margin-top: 2%;
 
   }
-
-  .input-group:last-of-type {
-    margin-left: 0%;
-  }
-
   .center{
     padding: .75rem;
   }
